IK chain length cannot be animated #96203

Closed
opened 2022-03-06 19:59:18 +01:00 by fan-dali · 26 comments

System Information
Operating system:win10
Graphics card:rtx2080

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen)blender-3.0.1-stable+v30.dc2d18018171-windows.amd64-release
Worked: (newest version of Blender that worked as expected) NO ONE

Short description of error

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
IK chain length is can‘t use animate property ,if I click 1-20 frames is 2 chain length, click 20-30 fremes is 1 chain length , then those NO:20-30 can't worked as expected ,and it just nothing heppend.

**System Information** Operating system:win10 Graphics card:rtx2080 **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen)blender-3.0.1-stable+v30.dc2d18018171-windows.amd64-release Worked: (newest version of Blender that worked as expected) NO ONE **Short description of error** **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). IK chain length is can‘t use animate property ,if I click 1-20 frames is 2 chain length, click 20-30 fremes is 1 chain length , then those NO:20-30 can't worked as expected ,and it just nothing heppend.
Author

Added subscriber: @fland

Added subscriber: @fland
Author
[1.blend](https://archive.blender.org/developer/F12899718/1.blend)
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

I can confirm that. But since it didn't work for any previous version, this might be a known limitation. Tagging the appropriate module for a more information.

I can confirm that. But since it didn't work for any previous version, this might be a known limitation. Tagging the appropriate module for a more information.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

The attached file was created with Blender 2.83.

The strange thing is that it works just fine when I unassign the Action and reassign it. @fland how did you create the file?

The attached file was created with Blender 2.83. The strange thing is that it works just fine when I unassign the Action and reassign it. @fland how did you create the file?
Author
[Blender_ [C__Users_1_Desktop_1.blend] 2022-03-07 20-11-42.mp4](https://archive.blender.org/developer/F12900538/Blender___C__Users_1_Desktop_1.blend__2022-03-07_20-11-42.mp4)
Author

I created with 3.0.1 stable ,I though it works with 2.83,but it is not

I created with 3.0.1 stable ,I though it works with 2.83,but it is not
Member

@dr.sybren It should be noted that making a change like reassigning the action will make it work for the current value of the chain length, but it will not work when the animation changes the value again. Not sure if this is the case for you, but it is in my testing.

@dr.sybren It should be noted that making a change like reassigning the action will make it work for the current value of the chain length, but it will not work when the animation changes the value again. Not sure if this is the case for you, but it is in my testing.

In #96203#1318036, @fland wrote:
I created with 3.0.1 stable ,I though it works with 2.83,but it is not

The file was last saved with 2.83. Since Blender 3 files are not guaranteed to be backward compatible with Blender 2, I don't think we can accept such a file for a bug report.

@fland if you can reproduce this with just the latest release of Blender, please share a new file.

> In #96203#1318036, @fland wrote: > I created with 3.0.1 stable ,I though it works with 2.83,but it is not The file was last saved with 2.83. Since Blender 3 files are not guaranteed to be backward compatible with Blender 2, I don't think we can accept such a file for a bug report. @fland if you can reproduce this with just the latest release of Blender, please share a new file.
Author
[1.blend](https://archive.blender.org/developer/F12900809/1.blend)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Thanks for the new file.

I've done some digging, and it turns out that the dependency graph makes the assumption that the IK chain length doesn't change (for developers later looking into this: the check is in DepsgraphRelationBuilder::build_ik_pose()). This makes it a tricky thing to resolve, as the evaluation of the animation system shouldn't trigger a complete rebuild of the dependency graph.

For now, consider the chain length un-animatable.

Thanks for the new file. I've done some digging, and it turns out that the dependency graph makes the assumption that the IK chain length doesn't change (for developers later looking into this: the check is in `DepsgraphRelationBuilder::build_ik_pose()`). This makes it a tricky thing to resolve, as the evaluation of the animation system shouldn't trigger a complete rebuild of the dependency graph. For now, consider the chain length un-animatable.
Sybren A. Stüvel changed title from IK chian length is can't use animate property to IK chain length cannot be animated 2022-03-07 17:21:08 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Same as {#82267}?

Same as {#82267}?

Yeah, looks like it. I'm going to commit a "fix" to at least have that property non-animatable. That way Blender at least communicates its current behaviour better.

I've put this topic on the agenda for the next Animation & Rigging meeting, so that we can decide to keep it this way (and thus close this task) or to put the effort in to allow IK chain length animation. That would need a good few use cases to illustrate the need, though.

Yeah, looks like it. I'm going to commit a "fix" to at least have that property non-animatable. That way Blender at least communicates its current behaviour better. I've put this topic on the agenda for [the next Animation & Rigging meeting](https://devtalk.blender.org/t/2022-03-17-animation-rigging-meeting-upcoming/23283), so that we can decide to keep it this way (and thus close this task) or to put the effort in to allow IK chain length animation. That would need a good few use cases to illustrate the need, though.
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Just putting here some of the workarounds mentioned in the anim meeting:

  • Have multiple IK constraints with the driver on their influence
  • Have multiple IK chains with different lengths, and a lower level chain that has driven Copy Transforms constraints to the different IK chains.

While I don't entirely understand how the depsgraph works, this feels like it's the same limitation as #76257. I basically understand it as "if there's a driver on a property that would affect relationships, depsgraph will assume all the relationships", which may not be entirely accurate, but it seems to work as a rule of thumb.

Just putting here some of the workarounds mentioned in the anim meeting: - Have multiple IK constraints with the driver on their influence - Have multiple IK chains with different lengths, and a lower level chain that has driven Copy Transforms constraints to the different IK chains. While I don't entirely understand how the depsgraph works, this feels like it's the same limitation as #76257. I basically understand it as "if there's a driver on a property that would affect relationships, depsgraph will assume all the relationships", which may not be entirely accurate, but it seems to work as a rule of thumb.

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber

Hello all and @dr.sybren,
Is there a way to keep the IK Chain Length attribute at least driver compatible?
While I understand it was not supposed to be animated, having it driven was useful for rigs.
It used to work properly with Blender versions below 3.2, but now sadly the old rig files are broken since these drivers aren't evaluated anymore.

Hello all and @dr.sybren, Is there a way to keep the IK Chain Length attribute at least driver compatible? While I understand it was not supposed to be animated, having it driven was useful for rigs. It used to work properly with Blender versions below 3.2, but now sadly the old rig files are broken since these drivers aren't evaluated anymore.

What exactly is the setup you're using? What is driving what, and for which purpose?

What exactly is the setup you're using? What is driving what, and for which purpose?

Sorry, please ignore my comment.
Actually, the IK length value was driven/changed dynamically to avoid cyclic dependencies with other constraints.
But actually, this workaround doesn't always work (a little lengthy to explain it all here)
In fact, in the current rig I was referring to, the problem lies elsewhere: even if the constraint is disabled or its influence set to 0, the IK constraint still leads to a cyclic dependency at some point (although it's not reported in the console, there is this typical laggy update when manipulating the rig, 1 frame offset. If the constraint is fully removed, this issue is gone. So it seems it's still evaluated in the loop, even if muted + 0 influence. But this is another story I guess.

Sorry, please ignore my comment. Actually, the IK length value was driven/changed dynamically to avoid cyclic dependencies with other constraints. But actually, this workaround doesn't always work (a little lengthy to explain it all here) In fact, in the current rig I was referring to, the problem lies elsewhere: even if the constraint is disabled or its influence set to 0, the IK constraint still leads to a cyclic dependency at some point (although it's not reported in the console, there is this typical laggy update when manipulating the rig, 1 frame offset. If the constraint is fully removed, this issue is gone. So it seems it's still evaluated in the loop, even if muted + 0 influence. But this is another story I guess.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Demeter Dzadik self-assigned this 2022-06-22 03:22:48 +02:00
Member

I think in that case this can be closed as "sort of Resolved" and you can open a new one for this new issue. Sounds like it shouldn't happen, unless the influence or Mute property is driven.

I think in that case this can be closed as "sort of Resolved" and you can open a new one for this new issue. Sounds like it shouldn't happen, unless the influence or Mute property is driven.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96203
No description provided.