source/blender/makesrna/intern/rna_constraint.c
@@ -1209,6 +1209,9 @@ static void rna_def_constraint_kinematic(BlenderRNA *brna)
 
   prop = RNA_def_property(srna, "chain_count", PROP_INT, PROP_NONE);
   RNA_def_property_int_sdna(prop, NULL, "rootbone");
+  /* Changing the IK chain length requires a rebuild of depsgraph relations. This makes it
+   * unsuitable for animation. */
+  RNA_def_property_clear_flag(prop, PROP_ANIMATABLE);
   RNA_def_property_range(prop, 0, 255);
   RNA_def_property_ui_text(
       prop, "Chain Length", "How many bones are included in the IK effect - 0 uses all bones");
@@ -3020,6 +3023,9 @@ static void rna_def_constraint_spline_ik(BlenderRNA *brna)
 
   prop = RNA_def_property(srna, "chain_count", PROP_INT, PROP_NONE);
   RNA_def_property_int_sdna(prop, NULL, "chainlen");
+  /* Changing the IK chain length requires a rebuild of depsgraph relations. This makes it
+   * unsuitable for animation. */
+  RNA_def_property_clear_flag(prop, PROP_ANIMATABLE);
   /* TODO: this should really check the max length of the chain the constraint is attached to */
   RNA_def_property_range(prop, 1, 255);
   RNA_def_property_ui_text(prop, "Chain Length", "How many bones are included in the chain");
